--- a/公众号名片/css/tab.css
+++ b/公众号名片/css/tab.css
@@ -1,12 +1,4 @@
-*{padding: 0;margin: 0;list-style-type:none; text-decoration:none;}
-#content{	
-	max-width: 750px;
-	margin: 0 auto;
-	background: #ffffff;
-}
-.content-box{                       
-	margin: 28px;
-}
+﻿
 .tab-selected{                   /* 头部已选择模块 */
 	height: 156px;
 	box-shadow:8px 8px 16px #cccccc;
