--- a/公众号名片/css/activity.css
+++ b/公众号名片/css/activity.css
@@ -89,6 +89,7 @@
 .activity-ul ul li{
 	float: left;
 	margin:10px 70px;
+	cursor: pointer;
 }
 .delete-box{                                    /* 删除窗口和弹出层*/
     position:fixed;
@@ -136,7 +137,18 @@
 	background: #f86060;
 	color: #ffffff;
 }
-.black{                                       /* 删除窗口阴影背景 */
+.black{                                       /* 微信阴影背景 */
+	width:100%;
+	height: 100%;
+	position: fixed;
+	top:0;
+	left:0;
+	display:none;
+	background:#000000;
+	opacity: 0.9;
+	z-index:100;      	    
+}
+.black2{                                       /* 删除窗口阴影背景 */
 	width:100%;
 	height: 100%;
 	position: fixed;
@@ -147,7 +159,6 @@
 	opacity: 0.7;
 	z-index:100;      	    
 }
-
 .wx-black{                               /* 微信弹出位置 */
 	position:fixed;
 	top:50%;
@@ -157,6 +168,9 @@
 	display:none;
 	cursor:pointer;
 }
+.list-delete label{
+	cursor: pointer;
+}
 .list-delete input[type="checkbox"]{     /* 原始选框消失 */
-    display: none;
+	display:none;
 }
