--- a/公众号名片/css/allform.css
+++ b/公众号名片/css/allform.css
@@ -52,6 +52,7 @@
 }
 .list-check{                     /* 选框相对定位 */
 	position: relative;
+	display: none;
 }
 .list-check label{             /* 选框位置绝对定位 */
 	position: absolute;
