--- a/公众号名片/css/activity.css
+++ b/公众号名片/css/activity.css
@@ -88,6 +88,8 @@
 }
 .activity-ul ul li{
 	float: left;
+	width: 34px;
+	height: 34px;
 	margin:10px 70px;
 	cursor: pointer;
 }
@@ -146,17 +148,6 @@
 	display:none;
 	background:#000000;
 	opacity: 0.9;
-	z-index:100;      	    
-}
-.black2{                                       /* 删除窗口阴影背景 */
-	width:100%;
-	height: 100%;
-	position: fixed;
-	top:0;
-	left:0;
-	display:none;
-	background:#000000;
-	opacity: 0.7;
 	z-index:100;      	    
 }
 .wx-black{                               /* 微信弹出位置 */
