--- a/公众号名片/css/communal.css
+++ b/公众号名片/css/communal.css
@@ -7,19 +7,10 @@ body{
 #scroll{
 	width: 100%;
 	height: 100%;
-	position: absolute; 
-}
-.swiper-wrapper{
-	height: auto;
-}
-.swiper-slide-active{
-	height: auto;
-}
-.swiper-slide{
-	height: 10px;
+	position: fixed;
 }
 .select-box{
-   margin-top: 10px;
+    margin-top: 10px;
 }
 .retreat{
     margin-left: 24px;
