--- a/公众号名片/css/form.css
+++ b/公众号名片/css/form.css
@@ -14,6 +14,8 @@
 .content-top-wx{                              /* 编辑完成页面编辑和微信  */
    width: 250px;
    display: flex;
+   position: absolute;
+   right: 30px;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-end;
@@ -53,16 +55,23 @@
 	margin-bottom: 20px;
 }
 .content-top-box{
+	position: relative;
 	display: flex;
 	padding-left: 24px;
 }
 .content-top-img{                         /*  编辑相册*/
-	float: left;
-	cursor: pointer;
+    position: absolute;
+	width: 180px;
+    height: 180px;
+	overflow: hidden;
 }
 .content-top-img img{                       /*  编辑相册大小*/
-	white-space: 180px;
+	width: 180px;
 	height: 180px;
+}
+.content-top-input{
+   position: absolute;
+   left: 200px;
 }
 .content-top-input input{               /* 公司头部输入框 */
 	height: 60px;
@@ -148,5 +157,15 @@
 	z-index:1000;
 	display:none;
 	cursor:pointer;
+}
+/*图片上传*/
+
+.file {
+	position: absolute;
+	left: 0;
+	top: 0;
+	opacity: 0;
+	width: 100%;
+	height: 100%; 
 }
 
