--- a/wxcard/src/css/cardbox.scss
+++ b/wxcard/src/css/cardbox.scss
@@ -56,22 +56,34 @@ $text-name:#383838;
     }
   }
 }
-#delete-false{
-  width: 150px;
+
+#delete-false {
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  width: 88px;
+  height: 88px;
+
 }
-#delete-true{
-  width: 150px;
+
+#delete-true {
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  width: 245px;
+  height: 72px;
 }
-.right-menu{
+
+.right-menu {
   position: fixed;
   width: 50px;
   z-index: 100;
   height: 1118px;
   right: 0;
   padding: 44px 0;
-  .right-menu-box{
+  .right-menu-box {
     text-align: center;
-    a{
+    a {
       font-size: 28px;
       padding: 1px 0;
       color: #5c5c5c;
@@ -80,15 +92,18 @@ $text-name:#383838;
   }
 }
 
-.item-wire {
-  height: 64px;
-  font-size: 32px;
-  display: flex;
-  align-items: center;
-  padding-left: 24px;
+.card-list {
+  .item-wire {
+    height: 64px;
+    font-size: 32px;
+    display: flex;
+    align-items: center;
+    padding-left: 24px;
+  }
 }
 
 .card-item {
+  border-top: 1px solid #D9D9D9;
   background: #fff;
   .card-item-box {
     height: 168px;
@@ -136,6 +151,7 @@ $text-name:#383838;
 .item-checkbox {
   position: absolute;
   right: 24px;
+  top: 60px;
 }
 
 .item-checkbox input[type="checkbox"] {
@@ -175,16 +191,16 @@ $text-name:#383838;
   }
 }
 
-
-
 .slide-fade-enter-active {
   transition: all .2s ease;
 }
+
 .slide-fade-leave-active {
   transition: all .3s cubic-bezier(1.0, 0.5, 0.8, 1.0);
 }
-.slide-fade-enter, .slide-fade-leave-to
-{
+
+.slide-fade-enter,
+.slide-fade-leave-to {
   transform: translateX(10px);
   opacity: 0;
 }
