--- a/wxcard/src/css/cardbox.scss
+++ b/wxcard/src/css/cardbox.scss
@@ -73,7 +73,9 @@ $text-name:#383838;
   width: 245px;
   height: 72px;
 }
-
+.vux-swipeout-button-box > div{
+  border: 1px solid #b4b4b4;
+}
 .right-menu {
   position: fixed;
   width: 50px;
@@ -191,6 +193,8 @@ $text-name:#383838;
   }
 }
 
+
+
 .slide-fade-enter-active {
   transition: all .2s ease;
 }
@@ -204,3 +208,7 @@ $text-name:#383838;
   transform: translateX(10px);
   opacity: 0;
 }
+
+
+
+
