--- a/wxcard/src/css/cardbox.scss
+++ b/wxcard/src/css/cardbox.scss
@@ -83,12 +83,12 @@ $text-name:#383838;
   z-index: 100;
   height: 1118px;
   right: 0;
-  padding: 44px 0;
+  padding: 60px 0;
   .right-menu-box {
     text-align: center;
     a {
-      font-size: 28px;
-      padding: 1px 0;
+      font-size: 24px;
+      padding: 2px 0;
       color: #5c5c5c;
       display: block;
     }
@@ -109,16 +109,16 @@ $text-name:#383838;
   border-top: 1px solid #D9D9D9;
   background: #fff;
   .card-item-box {
+    width: 582px;
     height: 168px;
     padding-left: 24px;
     display: flex;
     align-items: center;
+    display: inline-block;
     .item-img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
       float: left;
       text-align: center;
+      padding-top: 24px;
       img {
         width: 120px;
         height: 120px;
@@ -128,6 +128,8 @@ $text-name:#383838;
     .item-msg {
       float: left;
       padding-left: 24px;
+      display: inline-block;
+      padding-top: 24px;
       .item-name {
         padding: 3px 0;
         font-size: 24px;
@@ -157,9 +159,19 @@ $text-name:#383838;
 }
 
 .item-checkbox {
-  position: absolute;
+/*   position: absolute;
   right: 24px;
-  top: 60px;
+  top: 60px; */
+  position: relative;
+  float: right;
+  display: inline-block;
+  width: 144px;
+  height: 168px;
+  label{
+    position: absolute;
+    right: 24px;
+    top: 60px; 
+  }
 }
 
 .item-checkbox input[type="checkbox"] {
