--- a/wxcard10/src/css/cardbox.scss
+++ b/wxcard10/src/css/cardbox.scss
@@ -1,21 +1,5 @@
 $text-color:#5c5c5c;
 $text-name:#383838;
-.empty {
-  img {
-    display: block;
-    width: 425px;
-    margin: 0 auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
-  }
-  p {
-    text-align: center;
-    font-family: 'pingfang sc regular';
-    font-size: 28px;
-    color: #D3D3D3;
-  }
-}
-
 .page-seek {
   width: 526px;
   margin-top: 20px;
@@ -139,6 +123,19 @@ $text-name:#383838;
         width: 120px;
         height: 120px;
         border-radius: 50%;
+        position: relative;
+        display: inline-block;
+        &::after {
+          content: url('../../images/logo.png');
+          display: block;
+          position: absolute; //图片加载失败显示默认图
+          z-index: 100;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: #fff;
+        }
       }
     }
     .item-msg {
