--- a/wxcard1014/src/css/myCard.scss
+++ b/wxcard1014/src/css/myCard.scss
@@ -1,19 +1,21 @@
 $text-color:#555b5a;
+
 .empty {
-  img {
-    display: block;
-    width: 425px;
-    margin: 0 auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
-  }
-  p {
-    text-align: center;
-    font-family: 'pingfang sc regular';
-    font-size: 28px;
-    color: #D3D3D3;
-  }
+    img {
+        display: block;
+        width: 425px;
+        margin: 0 auto;
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
+    p {
+        text-align: center;
+        font-family: 'pingfang sc regular';
+        font-size: 28px;
+        color: #D3D3D3;
+    }
 }
+
 
 .company-name {
   margin-top: 36px;
@@ -89,13 +91,16 @@ $text-color:#555b5a;
       font-size: 24px;
       text-align: right;
       color: $text-color;
-    }
-    a {
-      width: 100%;
-      height: 72px;
-      font-size: 24px;
-      text-align: right;
-      color: #459BDD;
-    }
+    } // .industry-p {
+    //   display: flex;
+    //   justify-content: flex-end;
+    //   height: 72px;
+    //   font-size: 24px;
+    //   text-align: right;
+    //   color: $text-color;
+    //   span{
+    //     margin: 0 5px;
+    //   }
+    // }
   }
 }
